# senpai

./: .genio  CMakeLists.txt  LICENSE  Makefile  README.md
src/: inference_engine.cpp  inference_engine.h  main.cpp  sen_grammar.h
